# ebm

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  arclight_8cpp.html  arclight_8h.html  board_8cpp.html  board_8h.html  classArclight.html  classArclightShot.html  classArclightShotExplosion.html  classArclightUnit.html  classArclightWeapon.html  classBoard.html  classCrawler.html  classCrawlerUnit.html  classCrawlerWeapon.html  classExplosionWeapon.html  classGui.html  classItem.html  classLaserWeapon.html  classMech.html  classMeleeWeapon.html  classMeltingPoint.html  classMeltingPointLaser.html  classMeltingPointMultiWeapon.html  classMeltingPointSpawnerWeapon.html  classMeltingPointUnit.html  classMyTimer.html  classSpawnerWeapon.html  classUnit.html  (+31 more)
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake
source/: lib.cpp
src/: board.cpp  board.h  common.cpp  common.h  gui.cpp  gui.h  item.h  lib.cpp  main.cpp  mech.cpp  mech.h  mechs.cpp  mechs.h  unit.cpp  unit.h  weapon.cpp  weapon.h
src/mechs/: arclight.cpp  arclight.h  crawler.cpp  crawler.h  meltingpoint.cpp  meltingpoint.h
test/: CMakeLists.txt
test/source/: ebm_test.cpp
test/src/: ebm_test.cpp
